--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "swiper": "^12.1.1",
